WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12125
overflow attribute of the symbol element not respected
https://bugs.webkit.org/show_bug.cgi?id=12125
Summary
overflow attribute of the symbol element not respected
Andreas Neumann
Reported
2007-01-05 07:59:09 PST
In this example, only the lower right corner of the symbol instances are displayed. It seems like the "overflow" attribute of the symbol element isn't respected. See Opera and Batik for correct rendering. Thank you for having a look at it.
Attachments
First attempt
(8.79 KB, patch)
2007-01-06 13:15 PST
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Now includes changed testresult
(78.55 KB, patch)
2007-01-06 13:37 PST
,
Rob Buis
rwlbuis
: review-
Details
Formatted Diff
Diff
Now copying attr map
(156.15 KB, patch)
2007-01-06 15:10 PST
,
Rob Buis
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2007-01-06 13:15:29 PST
Created
attachment 12262
[details]
First attempt This should fix it :) Cheers, Rob.
Rob Buis
Comment 2
2007-01-06 13:37:25 PST
Created
attachment 12263
[details]
Now includes changed testresult This one includes changed testresult. Cheers, Rob.
Eric Seidel (no email)
Comment 3
2007-01-06 14:39:46 PST
Comment on
attachment 12263
[details]
Now includes changed testresult I don't know enough about the attributes system to know if: + dummy->setAttributeMap(target->attributes()); is safe. I expect it is, but you should check with hyatt before landing.
Rob Buis
Comment 4
2007-01-06 14:43:37 PST
***
Bug 10804
has been marked as a duplicate of this bug. ***
Rob Buis
Comment 5
2007-01-06 15:10:45 PST
Created
attachment 12264
[details]
Now copying attr map Now it copies the attributes instead of sharing them. Also includes one more changed testcase result. Cheers, Rob.
Darin Adler
Comment 6
2007-01-06 16:54:51 PST
Comment on
attachment 12264
[details]
Now copying attr map r=me
Rob Buis
Comment 7
2007-01-07 01:03:08 PST
Landed in
r18643
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug