        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=12125
        overflow attribute of the symbol element not respected

        Copy the attribute map to the cloned node so the overflow on
        the symbol is respected.



Canonical link: https://commits.webkit.org/15664@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18643 268f45cc-cd09-0410-ab3c-d52691b4dbfc